minor right-overflow fix

--- a/styles.css
+++ b/styles.css
@@ -111,15 +111,15 @@ img, svg {
     display: grid;
     gap: 2rem;
     padding: 2rem;
-    max-width: 100vw;
-    grid-template-columns: 1fr 32rem;
+    grid-template-columns: 1fr 30rem;
+    /* REDUCED MIN SIZE FOR BACKUP OVERFLOW CORRECTION */
 }
 
 section {
     display:grid;
     gap: 2rem;
-    grid-template-columns: repeat(auto-fill, minmax(32rem, 3fr));
-   
+    grid-template-columns: repeat(auto-fill, minmax(30rem, 3fr));
+    /* REDUCED MIN SIZE FOR BACKUP OVERFLOW CORRECTION */
 }
 
 .mainRightDiv {
@@ -175,7 +175,7 @@ hr {
     display: grid;
     min-height: 18.8rem;
     grid-template-rows: 9.4rem 9.4rem;
-    grid-template-columns: 1fr 32rem;
+    grid-template-columns: 1fr 30rem;
 }
 
 .head1, .head2, .head3, .head4 {
@@ -183,7 +183,6 @@ hr {
     place-items: center;
     grid-template: 1fr / 1fr 1fr 1fr;
     gap: 1rem;
-    /* grid-template-rows / grid-template-columns values */
 }
 
 .head2, .head4 {
